--- a/index.html
+++ b/index.html
@@ -242,8 +242,7 @@
   <img src="http://wenwenwork.qiniudn.com/images/neon.jpg" class="neon"/>
 </div>
 
-<script src="//ajax.googleapis.com/ajax/libs/jquery/1.11.0/jquery.min.js"></script>
-<script>window.jQuery || document.write('<script src="jquery-1.11.0.min.js"><\/script>')</script>
+<script src="jquery-1.11.0.min.js"></script>
 <script>
   (function($) {
     $.extend($.easing, {
