--- a/index.html
+++ b/index.html
@@ -193,7 +193,7 @@
           </div>   
         </div>
       </li>   
-       <li> 
+       <li style="clear: left;"> 
         <div class="container">
           <div class="pic">
             <img src="http://wenwenwork.qiniudn.com/images/photograph/g1.jpg"/>
